Archive2/38/81cd5cce10613b/output
main.cpp:7:24: error: unknown template name 'Observable'
class Generic : public Observable<R>
                       ^
main.cpp:14:14: error: no member named 'on' in 'IHostMediaAccessControl'
        hmac.on<FrameReceived>([this](const auto& event)
        ~~~~ ^
main.cpp:14:17: error: use of undeclared identifier 'FrameReceived'
        hmac.on<FrameReceived>([this](const auto& event)
                ^
main.cpp:16:32: error: use of undeclared identifier 'SofFrame'
            if (event.frame == SofFrame::Type::Response)
                               ^
main.cpp:26:14: error: no member named 'vector' in namespace 'std'
        std::vector<std::uint8_t> payload{};        
        ~~~~~^
main.cpp:26:33: error: expected '(' for function-style cast or type construction
        std::vector<std::uint8_t> payload{};        
                    ~~~~~~~~~~~~^
main.cpp:26:35: error: use of undeclared identifier 'payload'
        std::vector<std::uint8_t> payload{};        
                                  ^
main.cpp:27:9: error: use of undeclared identifier 'payload'
        payload.push_back(Id);
        ^
main.cpp:28:9: error: use of undeclared identifier 'fusion'
        fusion::for_each(sequence, [&payload](const auto& v)
        ^
main.cpp:28:38: error: use of undeclared identifier 'payload'
        fusion::for_each(sequence, [&payload](const auto& v)
                                     ^
main.cpp:30:19: error: use of undeclared identifier 'Fibaro'
            using Fibaro::serialize; // <--- customization point
                  ^
main.cpp:31:28: error: no member named 'back_inserter' in namespace 'std'
            serialize(std::back_inserter(payload), v);
                      ~~~~~^
main.cpp:31:42: error: use of undeclared identifier 'payload'
            serialize(std::back_inserter(payload), v);
                                         ^
main.cpp:33:9: error: use of undeclared identifier 'payload'
        payload.push_back(1); // <--- function identifier, na razie wystarczy stała "1"
        ^
main.cpp:34:15: error: no member named 'onSendFrame' in 'IHostMediaAccessControl'
        hmac_.onSendFrame(SofFrame{SofFrame::Type::Request, std::move(payload)});
        ~~~~~ ^
15 errors generated.
